@@ -213,6 +213,10 @@ nulloutput.devices.row2=0
 #Info: PixelController supports more than 1 universe
 #do NOT FORGET to define the output resolution above!
 #=========================
+#HINT: you define how many artnet panels are in use, in this example we use four panels.
+#artnet.layout.row1=NO_ROTATE,NO_ROTATE
+#artnet.layout.row2=NO_ROTATE,NO_ROTATE
+
 #controller ip address
 #artnet.ip=192.168.1.2
 
