@@ -55,6 +55,8 @@ public final class ConfigConstant {
 	public static final String ARTNET_PIXELS_PER_UNIVERSE = "artnet.pixels.per.universe";	
 	public static final String ARTNET_FIRST_UNIVERSE_ID = "artnet.first.universe.id";
 	public static final String ARTNET_BROADCAST_ADDR = "artnet.broadcast.address";
+	public static final String ARTNET_ROW1 = "artnet.layout.row1";
+	public static final String ARTNET_ROW2 = "artnet.layout.row2";
 
 	public static final String E131_IP = "e131.ip";
 	public static final String E131_PIXELS_PER_UNIVERSE = "e131.pixels.per.universe";	
