@@ -5,7 +5,8 @@ Changelog v1.4.1 to v1.5.0
 -Add Textwriter option (PingPong scrolling, left scrolling)
 -Add new Minimum and Maximum Mixer
 -Add new keyboard shortcut to select tabs (arrow keys)
--Add missing option 'snake cabeling' for TPM2.Net device
+-Add missing option 'snake cabling' and 'mapping' for TPM2.Net device
+-Add missing option 'snake cabling' and 'mapping' for Artnet/E1.31 devices
 -Add multipanel support for Artnet/E1.31 output
 -Fix use colorset name (instead of index) if a preset is saved
 -Fix colorscroll GUI element initialization
